<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time_from"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <EditText
        android:id="@+id/timeFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:digits="0123456789:"
        android:ems="10"
        android:hint="@string/example_time_from"
        android:inputType="time" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time_to" />

    <EditText
        android:id="@+id/timeTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:digits="0123456789:"
        android:ems="10"
        android:hint="@string/example_time_to"
        android:inputType="time"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weekday"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <Spinner
        android:id="@+id/weekdaySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>