<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/minimum_in_euro"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <EditText
        android:id="@+id/minimum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:digits="0123456789,"
        android:ems="10"
        android:hint="@string/example_minimum"
        android:inputType="numberDecimal" />

    <TextView
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/costs_in_euro" />

    <EditText
        android:id="@+id/costs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:digits="0123456789,"
        android:ems="10"
        android:hint="@string/example_costs"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal" />

</LinearLayout>