<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/appintro_statusbar_height"
    android:paddingBottom="@dimen/appintro2_bottombar_height"
    tools:background="@color/appintro_background_color">

    <TextView
        android:id="@+id/time"
        style="@style/AppIntroDefaultHeading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2" />

    <ImageView
        android:id="@+id/image"
        style="@style/AppIntroDefaultImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_intro_image_content_description"
        app:layout_constraintBottom_toTopOf="@+id/choose_printer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_weight="5"
        android:src="@drawable/ic_baseline_web_256" />

    <LinearLayout
        android:id="@+id/choose_printer_button"
        style="@style/AppIntroDefaultText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_weight="3">

        <TextView
            android:id="@+id/textView"
            style="@style/AppIntroDefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_description"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/AppIntroDefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/AppIntroDefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>