<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/appintro_statusbar_height"
    android:paddingBottom="@dimen/appintro2_bottombar_height"
    tools:background="@color/appintro_background_color">

    <TextView
        android:id="@+id/time"
        style="@style/AppIntroDefaultHeading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/choose_printer"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2" />

    <ImageView
        android:id="@+id/image"
        style="@style/AppIntroDefaultImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_intro_image_content_description"
        android:src="@drawable/ic_baseline_print_256"
        app:layout_constraintBottom_toTopOf="@+id/description_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_weight="5" />

    <TextView
        android:id="@+id/description_custom"
        style="@style/AppIntroDefaultText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoLink="web"
        android:text="@string/connect_printer_description"
        app:layout_constraintBottom_toTopOf="@+id/choose_printer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_weight="2" />

    <Button
        android:id="@+id/choose_printer_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:autoLink="web"
        android:text="@string/choose_printer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_custom"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>